add dock file