@@ -1,16 +1,11 @@
 FROM gradle:8.5.0-jdk17-alpine AS build
-RUN mkdir /app
-WORKDIR /app
-COPY --chown=gradle:gradle study_dev_ops_labs /app/study_dev_ops_labs
-WORKDIR /app/producer
-RUN gradle build --no-daemon
 
+COPY --chown=gradle:gradle . /home/gradle/src/study_dev_ops_labs
+WORKDIR /home/gradle/src/study_dev_ops_labs
+RUN gradle bootJar --no-daemon --stacktrace
 FROM openjdk:17-jdk-slim
 
 EXPOSE 9099
-
-
-
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/study_dev_ops_labs.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap","-jar","/app/study_dev_ops_labs.jar"]
+ARG JAR_FILE=build/libs/*.jar
+COPY --from=build /home/gradle/src/producer/build/libs/*.jar study_dev_ops_labs.jar
+ENTRYPOINT ["java","-jar","/study_dev_ops_labs.jar"]
